2003-07-05  Benhur Stein <benhur@inf.ufsm.br>

	* DiffMiddleView.m (tile): Set needs display.
	(drawRect:): Use a bluish color for the foreground.
	* DiffScroller.m (drawRect:): Idem.
	* DiffTextView.m (computeLineRangesFromUpTo:): Avoid an empty range. 
	* DiffView.m: Display fixups.

2003-07-05  Philippe C.D. Robert <probert@siggraph.org>

        * Replacing all #import directives with #include directives
        * Changing main menu title to EasyDiff
        * Updating Gorm files

2002-06-23  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* fix for patch creation. (patch from right to left would not work)
	
2002-06-12  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* gcc 2.95 fix
	
2002-06-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Committing to GNUstep CVS repository in dev-apps.

2002-06-02  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Merging support, patching support among other changes

2002-04-17  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Version 0.1.9

2002-02-14  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Version 0.1
